# hearts

./: .gitignore  Cards.hs  Hearts.hs  Main.hs  Makefile  README.md  hearts.cabal  out
cli/: Main.hs
src/: Cards.hs  Hearts.hs  Main.hs
src/Hearts/: RandomPlayer.hs
