name:                hearts
version:             0.1.0.0
synopsis:            Play hearts from a command line interface
license:             MIT
license-file:        LICENSE
author:              Patrick Herrmann
maintainer:          patrickwherrmann@gmail.com
copyright:           Patrick Herrmann 2015
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hearts
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base == 4.*,
                       containers,
                       split,
                       random-fu
  default-language:    Haskell2010