name:                hearts
version:             0.1.0.0
synopsis:            Play hearts from a command line interface
description:         The card game hearts, playable from a command line interface. Work in progress.
license:             MIT
license-file:        LICENSE
author:              Patrick Herrmann
maintainer:          patrickwherrmann@gmail.com
copyright:           Patrick Herrmann 2015
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/patrickherrmann/hearts.git

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Hearts
                       Cards
  build-depends:       base == 4.*,
                       containers,
                       split,
                       random-fu,
                       mtl

executable hearts-cli
  default-language:    Haskell2010
  hs-source-dirs:      cli
  main-is:             Main.hs
  build-depends:       base == 4.*,
                       hearts,
                       containers,
                       random-fu